exports[`prefer-classlist-toggle > invalid(1): condition ? element.classList.add(className) : element.classList.remove(className) 1`] = `

  1 | condition ? element.classList.add(className) : element.classList.remove(className)

`;

exports[`prefer-classlist-toggle > invalid(1): condition ? element.classList.add(className) : element.classList.remove(className) 2`] = `

Message:
> 1 | condition ? element.classList.add(className) : element.classList.remove(className)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(className, condition)

`;

exports[`prefer-classlist-toggle > invalid(1): element.classList[condition ? \"add\" : \"remove\"]((\"className\")); 1`] = `

  1 | element.classList[condition ? "add" : "remove"](("className"));

`;

exports[`prefer-classlist-toggle > invalid(1): element.classList[condition ? \"add\" : \"remove\"]((\"className\")); 2`] = `

Message:
> 1 | element.classList[condition ? "add" : "remove"](("className"));
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(("className"), condition);

`;

exports[`prefer-classlist-toggle > invalid(1): element.classList[condition ? \"add\" : \"remove\"](className) 1`] = `

  1 | element.classList[condition ? "add" : "remove"](className)

`;

exports[`prefer-classlist-toggle > invalid(1): element.classList[condition ? \"add\" : \"remove\"](className) 2`] = `

Message:
> 1 | element.classList[condition ? "add" : "remove"](className)
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(className, condition)

`;

exports[`prefer-classlist-toggle > invalid(1): if (condition) {\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 1`] = `

  1 | if (condition) {
  2 | 	element.classList.add('className');
  3 | } else {
  4 | 	element.classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(1): if (condition) {\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 2 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', condition);

`;

exports[`prefer-classlist-toggle > invalid(10): element.classList.contains?.('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 1`] = `

  1 | element.classList.contains?.('className')
  2 | 	? element.classList.remove('className')
  3 | 	: element.classList.add('className')

`;

exports[`prefer-classlist-toggle > invalid(10): element.classList.contains?.('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 2`] = `

Message:
> 1 | element.classList.contains?.('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !element.classList.contains?.('className'))

`;

exports[`prefer-classlist-toggle > invalid(10): element.classList[element?.classList.contains(\"className\") ? \"remove\" : \"add\"](\"className\") 1`] = `

  1 | element.classList[element?.classList.contains("className") ? "remove" : "add"]("className")

`;

exports[`prefer-classlist-toggle > invalid(10): element.classList[element?.classList.contains(\"className\") ? \"remove\" : \"add\"](\"className\") 2`] = `

Message:
> 1 | element.classList[element?.classList.contains("className") ? "remove" : "add"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className")

`;

exports[`prefer-classlist-toggle > invalid(10): if (condition) {\n\telement.classList.remove(((className)));\n} else {\n\telement.classList.add(((className)));\n} 1`] = `

  1 | if (condition) {
  2 | 	element.classList.remove(((className)));
  3 | } else {
  4 | 	element.classList.add(((className)));
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(10): if (condition) {\n\telement.classList.remove(((className)));\n} else {\n\telement.classList.add(((className)));\n} 2`] = `

Message:
> 1 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove(((className)));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add(((className)));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(((className)), !condition);

`;

exports[`prefer-classlist-toggle > invalid(11): element.classList?.contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 1`] = `

  1 | element.classList?.contains('className')
  2 | 	? element.classList.remove('className')
  3 | 	: element.classList.add('className')

`;

exports[`prefer-classlist-toggle > invalid(11): element.classList?.contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 2`] = `

Message:
> 1 | element.classList?.contains('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !element.classList?.contains('className'))

`;

exports[`prefer-classlist-toggle > invalid(11): element.classList[element.classList.contains?.(\"className\") ? \"remove\" : \"add\"](\"className\") 1`] = `

  1 | element.classList[element.classList.contains?.("className") ? "remove" : "add"]("className")

`;

exports[`prefer-classlist-toggle > invalid(11): element.classList[element.classList.contains?.(\"className\") ? \"remove\" : \"add\"](\"className\") 2`] = `

Message:
> 1 | element.classList[element.classList.contains?.("className") ? "remove" : "add"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className", !element.classList.contains?.("className"))

`;

exports[`prefer-classlist-toggle > invalid(11): foo\n\nif (condition) {\n\t(( element )).classList.add('className')\n} else {\n\telement.classList.remove('className')\n} 1`] = `

  1 | foo
  2 |
  3 | if (condition) {
  4 | 	(( element )).classList.add('className')
  5 | } else {
  6 | 	element.classList.remove('className')
  7 | }

`;

exports[`prefer-classlist-toggle > invalid(11): foo\n\nif (condition) {\n\t(( element )).classList.add('className')\n} else {\n\telement.classList.remove('className')\n} 2`] = `

Message:
  1 | foo
  2 |
> 3 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 4 | 	(( element )).classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | } else {
    | ^^^^^^^^
> 6 | 	element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 7 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | foo
  2 |
  3 | ;(( element )).classList.toggle('className', condition);

`;

exports[`prefer-classlist-toggle > invalid(12): element.classList.notContains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 1`] = `

  1 | element.classList.notContains('className')
  2 | 	? element.classList.remove('className')
  3 | 	: element.classList.add('className')

`;

exports[`prefer-classlist-toggle > invalid(12): element.classList.notContains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 2`] = `

Message:
> 1 | element.classList.notContains('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !element.classList.notContains('className'))

`;

exports[`prefer-classlist-toggle > invalid(12): element.classList[element.classList?.contains(\"className\") ? \"remove\" : \"add\"](\"className\") 1`] = `

  1 | element.classList[element.classList?.contains("className") ? "remove" : "add"]("className")

`;

exports[`prefer-classlist-toggle > invalid(12): element.classList[element.classList?.contains(\"className\") ? \"remove\" : \"add\"](\"className\") 2`] = `

Message:
> 1 | element.classList[element.classList?.contains("className") ? "remove" : "add"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className", !element.classList?.contains("className"))

`;

exports[`prefer-classlist-toggle > invalid(12): if (condition) {\n\t(( element )).classList.add('className')\n} else {\n\telement.classList.remove('className')\n}\n\n[].forEach(foo); 1`] = `

  1 | if (condition) {
  2 | 	(( element )).classList.add('className')
  3 | } else {
  4 | 	element.classList.remove('className')
  5 | }
  6 |
  7 | [].forEach(foo);

`;

exports[`prefer-classlist-toggle > invalid(12): if (condition) {\n\t(( element )).classList.add('className')\n} else {\n\telement.classList.remove('className')\n}\n\n[].forEach(foo); 2`] = `

Message:
> 1 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 2 | 	(( element )).classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.
  6 |
  7 | [].forEach(foo);

Output:
  1 | (( element )).classList.toggle('className', condition);
  2 |
  3 | [].forEach(foo);

`;

exports[`prefer-classlist-toggle > invalid(13): element.classList.contains('not-same-class-name')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 1`] = `

  1 | element.classList.contains('not-same-class-name')
  2 | 	? element.classList.remove('className')
  3 | 	: element.classList.add('className')

`;

exports[`prefer-classlist-toggle > invalid(13): element.classList.contains('not-same-class-name')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 2`] = `

Message:
> 1 | element.classList.contains('not-same-class-name')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !element.classList.contains('not-same-class-name'))

`;

exports[`prefer-classlist-toggle > invalid(13): element.classList[element.classList.notContains(\"className\") ? \"remove\" : \"add\"](\"className\") 1`] = `

  1 | element.classList[element.classList.notContains("className") ? "remove" : "add"]("className")

`;

exports[`prefer-classlist-toggle > invalid(13): element.classList[element.classList.notContains(\"className\") ? \"remove\" : \"add\"](\"className\") 2`] = `

Message:
> 1 | element.classList[element.classList.notContains("className") ? "remove" : "add"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className", !element.classList.notContains("className"))

`;

exports[`prefer-classlist-toggle > invalid(13): if (element.classList.contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (element.classList.contains('className')) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(13): if (element.classList.contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (element.classList.contains('className')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className');

`;

exports[`prefer-classlist-toggle > invalid(14): element.classList[element.classList.contains(\"not-same-class-name\") ? \"remove\" : \"add\"](\"className\") 1`] = `

  1 | element.classList[element.classList.contains("not-same-class-name") ? "remove" : "add"]("className")

`;

exports[`prefer-classlist-toggle > invalid(14): element.classList[element.classList.contains(\"not-same-class-name\") ? \"remove\" : \"add\"](\"className\") 2`] = `

Message:
> 1 | element.classList[element.classList.contains("not-same-class-name") ? "remove" : "add"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className", !element.classList.contains("not-same-class-name"))

`;

exports[`prefer-classlist-toggle > invalid(14): element.notClassList.contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 1`] = `

  1 | element.notClassList.contains('className')
  2 | 	? element.classList.remove('className')
  3 | 	: element.classList.add('className')

`;

exports[`prefer-classlist-toggle > invalid(14): element.notClassList.contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 2`] = `

Message:
> 1 | element.notClassList.contains('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !element.notClassList.contains('className'))

`;

exports[`prefer-classlist-toggle > invalid(14): if (element?.classList.contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (element?.classList.contains('className')) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(14): if (element?.classList.contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (element?.classList.contains('className')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element?.classList.toggle('className');

`;

exports[`prefer-classlist-toggle > invalid(15): contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 1`] = `

  1 | contains('className')
  2 | 	? element.classList.remove('className')
  3 | 	: element.classList.add('className')

`;

exports[`prefer-classlist-toggle > invalid(15): contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 2`] = `

Message:
> 1 | contains('className')
    | ^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !contains('className'))

`;

exports[`prefer-classlist-toggle > invalid(15): element.classList[element.notClassList.contains(\"className\") ? \"remove\" : \"add\"](\"className\") 1`] = `

  1 | element.classList[element.notClassList.contains("className") ? "remove" : "add"]("className")

`;

exports[`prefer-classlist-toggle > invalid(15): element.classList[element.notClassList.contains(\"className\") ? \"remove\" : \"add\"](\"className\") 2`] = `

Message:
> 1 | element.classList[element.notClassList.contains("className") ? "remove" : "add"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className", !element.notClassList.contains("className"))

`;

exports[`prefer-classlist-toggle > invalid(15): if (element.classList.contains?.('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (element.classList.contains?.('className')) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(15): if (element.classList.contains?.('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (element.classList.contains?.('className')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !element.classList.contains?.('className'));

`;

exports[`prefer-classlist-toggle > invalid(16): element.classList[contains(\"className\") ? \"remove\" : \"add\"](\"className\") 1`] = `

  1 | element.classList[contains("className") ? "remove" : "add"]("className")

`;

exports[`prefer-classlist-toggle > invalid(16): element.classList[contains(\"className\") ? \"remove\" : \"add\"](\"className\") 2`] = `

Message:
> 1 | element.classList[contains("className") ? "remove" : "add"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className", !contains("className"))

`;

exports[`prefer-classlist-toggle > invalid(16): if (element.classList?.contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (element.classList?.contains('className')) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(16): if (element.classList?.contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (element.classList?.contains('className')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !element.classList?.contains('className'));

`;

exports[`prefer-classlist-toggle > invalid(16): notSameElement.classList.contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 1`] = `

  1 | notSameElement.classList.contains('className')
  2 | 	? element.classList.remove('className')
  3 | 	: element.classList.add('className')

`;

exports[`prefer-classlist-toggle > invalid(16): notSameElement.classList.contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 2`] = `

Message:
> 1 | notSameElement.classList.contains('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !notSameElement.classList.contains('className'))

`;

exports[`prefer-classlist-toggle > invalid(17): element.classList.contains('className')\n\t? element.classList.add('className')\n\t: element.classList.remove('className') 1`] = `

  1 | element.classList.contains('className')
  2 | 	? element.classList.add('className')
  3 | 	: element.classList.remove('className')

`;

exports[`prefer-classlist-toggle > invalid(17): element.classList.contains('className')\n\t? element.classList.add('className')\n\t: element.classList.remove('className') 2`] = `

Message:
> 1 | element.classList.contains('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', element.classList.contains('className'))

`;

exports[`prefer-classlist-toggle > invalid(17): element.classList[notSameElement.classList.contains(\"className\") ? \"remove\" : \"add\"](\"className\") 1`] = `

  1 | element.classList[notSameElement.classList.contains("className") ? "remove" : "add"]("className")

`;

exports[`prefer-classlist-toggle > invalid(17): element.classList[notSameElement.classList.contains(\"className\") ? \"remove\" : \"add\"](\"className\") 2`] = `

Message:
> 1 | element.classList[notSameElement.classList.contains("className") ? "remove" : "add"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className", !notSameElement.classList.contains("className"))

`;

exports[`prefer-classlist-toggle > invalid(17): if (element.classList.notContains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (element.classList.notContains('className')) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(17): if (element.classList.notContains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (element.classList.notContains('className')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !element.classList.notContains('className'));

`;

exports[`prefer-classlist-toggle > invalid(18): !element.classList.contains('className')\n\t? element.classList.add('className')\n\t: element.classList.remove('className') 1`] = `

  1 | !element.classList.contains('className')
  2 | 	? element.classList.add('className')
  3 | 	: element.classList.remove('className')

`;

exports[`prefer-classlist-toggle > invalid(18): !element.classList.contains('className')\n\t? element.classList.add('className')\n\t: element.classList.remove('className') 2`] = `

Message:
> 1 | !element.classList.contains('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className')

`;

exports[`prefer-classlist-toggle > invalid(18): element.classList[element.classList.contains(\"className\") ? \"add\": \"remove\"](\"className\") 1`] = `

  1 | element.classList[element.classList.contains("className") ? "add": "remove"]("className")

`;

exports[`prefer-classlist-toggle > invalid(18): element.classList[element.classList.contains(\"className\") ? \"add\": \"remove\"](\"className\") 2`] = `

Message:
> 1 | element.classList[element.classList.contains("className") ? "add": "remove"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className", element.classList.contains("className"))

`;

exports[`prefer-classlist-toggle > invalid(18): if (element.classList.contains('not-same-class-name')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (element.classList.contains('not-same-class-name')) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(18): if (element.classList.contains('not-same-class-name')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (element.classList.contains('not-same-class-name')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !element.classList.contains('not-same-class-name'));

`;

exports[`prefer-classlist-toggle > invalid(19): element.classList[!element.classList.contains(\"className\") ? \"add\": \"remove\"](\"className\") 1`] = `

  1 | element.classList[!element.classList.contains("className") ? "add": "remove"]("className")

`;

exports[`prefer-classlist-toggle > invalid(19): element.classList[!element.classList.contains(\"className\") ? \"add\": \"remove\"](\"className\") 2`] = `

Message:
> 1 | element.classList[!element.classList.contains("className") ? "add": "remove"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className")

`;

exports[`prefer-classlist-toggle > invalid(19): if (element.notClassList.contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (element.notClassList.contains('className')) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(19): if (element.notClassList.contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (element.notClassList.contains('className')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !element.notClassList.contains('className'));

`;

exports[`prefer-classlist-toggle > invalid(2): condition ? element?.classList.add(className) : element.classList.remove(className) 1`] = `

  1 | condition ? element?.classList.add(className) : element.classList.remove(className)

`;

exports[`prefer-classlist-toggle > invalid(2): condition ? element?.classList.add(className) : element.classList.remove(className) 2`] = `

Message:
> 1 | condition ? element?.classList.add(className) : element.classList.remove(className)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element?.classList.toggle(className, condition)

`;

exports[`prefer-classlist-toggle > invalid(2): element.classList[condition ? \"add\" : \"remove\"]((\"a\", \"b\")); 1`] = `

  1 | element.classList[condition ? "add" : "remove"](("a", "b"));

`;

exports[`prefer-classlist-toggle > invalid(2): element.classList[condition ? \"add\" : \"remove\"]((\"a\", \"b\")); 2`] = `

Message:
> 1 | element.classList[condition ? "add" : "remove"](("a", "b"));
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(("a", "b"), condition);

`;

exports[`prefer-classlist-toggle > invalid(2): element.classList[condition ? \"remove\": \"add\"](className) 1`] = `

  1 | element.classList[condition ? "remove": "add"](className)

`;

exports[`prefer-classlist-toggle > invalid(2): element.classList[condition ? \"remove\": \"add\"](className) 2`] = `

Message:
> 1 | element.classList[condition ? "remove": "add"](className)
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(className, !condition)

`;

exports[`prefer-classlist-toggle > invalid(2): if (condition)\n\telement.classList.add('className');\nelse\n\telement.classList.remove('className'); 1`] = `

  1 | if (condition)
  2 | 	element.classList.add('className');
  3 | else
  4 | 	element.classList.remove('className');

`;

exports[`prefer-classlist-toggle > invalid(2): if (condition)\n\telement.classList.add('className');\nelse\n\telement.classList.remove('className'); 2`] = `

Message:
> 1 | if (condition)
    | ^^^^^^^^^^^^^^
> 2 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | else
    | ^^^^
> 4 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', condition);

`;

exports[`prefer-classlist-toggle > invalid(20): element.classList[/* comment */ condition ? \"add\" : \"remove\"](\"className\"); 1`] = `

  1 | element.classList[/* comment */ condition ? "add" : "remove"]("className");

`;

exports[`prefer-classlist-toggle > invalid(20): element.classList[/* comment */ condition ? \"add\" : \"remove\"](\"className\"); 2`] = `

Message:
> 1 | element.classList[/* comment */ condition ? "add" : "remove"]("className");
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

`;

exports[`prefer-classlist-toggle > invalid(20): if (contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (contains('className')) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(20): if (contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (contains('className')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !contains('className'));

`;

exports[`prefer-classlist-toggle > invalid(21): element.classList[condition ? /* comment */ \"add\" : \"remove\"](\"className\"); 1`] = `

  1 | element.classList[condition ? /* comment */ "add" : "remove"]("className");

`;

exports[`prefer-classlist-toggle > invalid(21): element.classList[condition ? /* comment */ \"add\" : \"remove\"](\"className\"); 2`] = `

Message:
> 1 | element.classList[condition ? /* comment */ "add" : "remove"]("className");
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

`;

exports[`prefer-classlist-toggle > invalid(21): if (notSameElement.classList.contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (notSameElement.classList.contains('className')) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(21): if (notSameElement.classList.contains('className')) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (notSameElement.classList.contains('className')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !notSameElement.classList.contains('className'));

`;

exports[`prefer-classlist-toggle > invalid(22): if (condition) {\n\t// Keep this comment\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 1`] = `

  1 | if (condition) {
  2 | 	// Keep this comment
  3 | 	element.classList.add('className');
  4 | } else {
  5 | 	element.classList.remove('className');
  6 | }

`;

exports[`prefer-classlist-toggle > invalid(22): if (condition) {\n\t// Keep this comment\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 2 | 	// Keep this comment
    | ^^^^^^^^^^^^^^^^^^^^^
> 3 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | } else {
    | ^^^^^^^^
> 5 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 6 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

`;

exports[`prefer-classlist-toggle > invalid(22): if (element.classList.contains('className')) {\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 1`] = `

  1 | if (element.classList.contains('className')) {
  2 | 	element.classList.add('className');
  3 | } else {
  4 | 	element.classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(22): if (element.classList.contains('className')) {\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (element.classList.contains('className')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', element.classList.contains('className'));

`;

exports[`prefer-classlist-toggle > invalid(23): if (!element.classList.contains('className')) {\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 1`] = `

  1 | if (!element.classList.contains('className')) {
  2 | 	element.classList.add('className');
  3 | } else {
  4 | 	element.classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(23): if (!element.classList.contains('className')) {\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (!element.classList.contains('className')) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className');

`;

exports[`prefer-classlist-toggle > invalid(23): if (condition /* comment */) {\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 1`] = `

  1 | if (condition /* comment */) {
  2 | 	element.classList.add('className');
  3 | } else {
  4 | 	element.classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(23): if (condition /* comment */) {\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (condition /* comment */) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

`;

exports[`prefer-classlist-toggle > invalid(24): if (condition) {\n\t(element as Element).classList.add('className');\n} else {\n\t(element as Element).classList.remove('className');\n} 1`] = `

  1 | if (condition) {
  2 | 	(element as Element).classList.add('className');
  3 | } else {
  4 | 	(element as Element).classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(24): if (condition) {\n\t(element as Element).classList.add('className');\n} else {\n\t(element as Element).classList.remove('className');\n} 2`] = `

Message:
> 1 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 2 | 	(element as Element).classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	(element as Element).classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | (element as Element).classList.toggle('className', condition);

`;

exports[`prefer-classlist-toggle > invalid(24): if (condition) {\n\telement.classList.add('className');\n} else /* comment */ {\n\telement.classList.remove('className');\n} 1`] = `

  1 | if (condition) {
  2 | 	element.classList.add('className');
  3 | } else /* comment */ {
  4 | 	element.classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(24): if (condition) {\n\telement.classList.add('className');\n} else /* comment */ {\n\telement.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 2 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else /* comment */ {
    | ^^^^^^^^^^^^^^^^^^^^^^
> 4 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

`;

exports[`prefer-classlist-toggle > invalid(25): if (condition) {\n\telement!.classList.add('className');\n} else {\n\telement!.classList.remove('className');\n} 1`] = `

  1 | if (condition) {
  2 | 	element!.classList.add('className');
  3 | } else {
  4 | 	element!.classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(25): if (condition) {\n\telement!.classList.add('className');\n} else {\n\telement!.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 2 | 	element!.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element!.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element!.classList.toggle('className', condition);

`;

exports[`prefer-classlist-toggle > invalid(3): condition ? element.classList.add(className) : element?.classList.remove(className) 1`] = `

  1 | condition ? element.classList.add(className) : element?.classList.remove(className)

`;

exports[`prefer-classlist-toggle > invalid(3): condition ? element.classList.add(className) : element?.classList.remove(className) 2`] = `

Message:
> 1 | condition ? element.classList.add(className) : element?.classList.remove(className)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element?.classList.toggle(className, condition)

`;

exports[`prefer-classlist-toggle > invalid(3): element?.classList[condition ? \"add\" : \"remove\"](className) 1`] = `

  1 | element?.classList[condition ? "add" : "remove"](className)

`;

exports[`prefer-classlist-toggle > invalid(3): element?.classList[condition ? \"add\" : \"remove\"](className) 2`] = `

Message:
> 1 | element?.classList[condition ? "add" : "remove"](className)
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element?.classList.toggle(className, condition)

`;

exports[`prefer-classlist-toggle > invalid(3): if (condition)\n\telement.classList.add('className');\nelse {\n\telement.classList.remove('className');\n} 1`] = `

  1 | if (condition)
  2 | 	element.classList.add('className');
  3 | else {
  4 | 	element.classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(3): if (condition)\n\telement.classList.add('className');\nelse {\n\telement.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (condition)
    | ^^^^^^^^^^^^^^
> 2 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | else {
    | ^^^^^^
> 4 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', condition);

`;

exports[`prefer-classlist-toggle > invalid(4): condition ? element.classList.remove(className) : element.classList.add(className) 1`] = `

  1 | condition ? element.classList.remove(className) : element.classList.add(className)

`;

exports[`prefer-classlist-toggle > invalid(4): condition ? element.classList.remove(className) : element.classList.add(className) 2`] = `

Message:
> 1 | condition ? element.classList.remove(className) : element.classList.add(className)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(className, !condition)

`;

exports[`prefer-classlist-toggle > invalid(4): const toggle = (element) => element.classList[condition ? \"add\" : \"remove\"](className) 1`] = `

  1 | const toggle = (element) => element.classList[condition ? "add" : "remove"](className)

`;

exports[`prefer-classlist-toggle > invalid(4): const toggle = (element) => element.classList[condition ? \"add\" : \"remove\"](className) 2`] = `

Message:
> 1 | const toggle = (element) => element.classList[condition ? "add" : "remove"](className)
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Suggestion 1/1: Replace with \`Element#classList.toggle()\`.:
  1 | const toggle = (element) => element.classList.toggle(className, condition)

`;

exports[`prefer-classlist-toggle > invalid(4): if (condition) {\n\telement?.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 1`] = `

  1 | if (condition) {
  2 | 	element?.classList.add('className');
  3 | } else {
  4 | 	element.classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(4): if (condition) {\n\telement?.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 2 | 	element?.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element?.classList.toggle('className', condition);

`;

exports[`prefer-classlist-toggle > invalid(5): element.classList[condition ? \"add\" : \"remove\"](((className))) 1`] = `

  1 | element.classList[condition ? "add" : "remove"](((className)))

`;

exports[`prefer-classlist-toggle > invalid(5): element.classList[condition ? \"add\" : \"remove\"](((className))) 2`] = `

Message:
> 1 | element.classList[condition ? "add" : "remove"](((className)))
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(((className)), condition)

`;

exports[`prefer-classlist-toggle > invalid(5): if (condition ? element.classList.add(className) : element.classList.remove(className)); 1`] = `

  1 | if (condition ? element.classList.add(className) : element.classList.remove(className));

`;

exports[`prefer-classlist-toggle > invalid(5): if (condition ? element.classList.add(className) : element.classList.remove(className)); 2`] = `

Message:
> 1 | if (condition ? element.classList.add(className) : element.classList.remove(className));
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Suggestion 1/1: Replace with \`Element#classList.toggle()\`.:
  1 | if (element.classList.toggle(className, condition));

`;

exports[`prefer-classlist-toggle > invalid(5): if (condition)\n\telement.classList.add('className');\nelse\n\telement?.classList.remove('className'); 1`] = `

  1 | if (condition)
  2 | 	element.classList.add('className');
  3 | else
  4 | 	element?.classList.remove('className');

`;

exports[`prefer-classlist-toggle > invalid(5): if (condition)\n\telement.classList.add('className');\nelse\n\telement?.classList.remove('className'); 2`] = `

Message:
> 1 | if (condition)
    | ^^^^^^^^^^^^^^
> 2 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | else
    | ^^^^
> 4 | 	element?.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element?.classList.toggle('className', condition);

`;

exports[`prefer-classlist-toggle > invalid(6): element.classList[index % 2 ? \"remove\" : \"add\"](className) 1`] = `

  1 | element.classList[index % 2 ? "remove" : "add"](className)

`;

exports[`prefer-classlist-toggle > invalid(6): element.classList[index % 2 ? \"remove\" : \"add\"](className) 2`] = `

Message:
> 1 | element.classList[index % 2 ? "remove" : "add"](className)
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(className, !(index % 2))

`;

exports[`prefer-classlist-toggle > invalid(6): function foo() {\n\treturn!foo ? element.classList.add(className) : element.classList.remove(className)\n} 1`] = `

  1 | function foo() {
  2 | 	return!foo ? element.classList.add(className) : element.classList.remove(className)
  3 | }

`;

exports[`prefer-classlist-toggle > invalid(6): function foo() {\n\treturn!foo ? element.classList.add(className) : element.classList.remove(className)\n} 2`] = `

Message:
  1 | function foo() {
> 2 | 	return!foo ? element.classList.add(className) : element.classList.remove(className)
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.
  3 | }

Suggestion 1/1: Replace with \`Element#classList.toggle()\`.:
  1 | function foo() {
  2 | 	return element.classList.toggle(className, !foo)
  3 | }

`;

exports[`prefer-classlist-toggle > invalid(6): if (condition) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (condition) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(6): if (condition) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !condition);

`;

exports[`prefer-classlist-toggle > invalid(7): element.classList[(index % 2) ? \"remove\" : \"add\"](className) 1`] = `

  1 | element.classList[(index % 2) ? "remove" : "add"](className)

`;

exports[`prefer-classlist-toggle > invalid(7): element.classList[(index % 2) ? \"remove\" : \"add\"](className) 2`] = `

Message:
> 1 | element.classList[(index % 2) ? "remove" : "add"](className)
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(className, !(index % 2))

`;

exports[`prefer-classlist-toggle > invalid(7): foo\n\ncondition ? (( element )).classList.add(className) : element.classList.remove(className); 1`] = `

  1 | foo
  2 |
  3 | condition ? (( element )).classList.add(className) : element.classList.remove(className);

`;

exports[`prefer-classlist-toggle > invalid(7): foo\n\ncondition ? (( element )).classList.add(className) : element.classList.remove(className); 2`] = `

Message:
  1 | foo
  2 |
> 3 | condition ? (( element )).classList.add(className) : element.classList.remove(className);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | foo
  2 |
  3 | ;(( element )).classList.toggle(className, condition);

`;

exports[`prefer-classlist-toggle > invalid(7): if (condition) {\n\t(( element )).classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 1`] = `

  1 | if (condition) {
  2 | 	(( element )).classList.add('className');
  3 | } else {
  4 | 	element.classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(7): if (condition) {\n\t(( element )).classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (condition) {
    | ^^^^^^^^^^^^^^^^
> 2 | 	(( element )).classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | (( element )).classList.toggle('className', condition);

`;

exports[`prefer-classlist-toggle > invalid(8): element.classList.contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 1`] = `

  1 | element.classList.contains('className')
  2 | 	? element.classList.remove('className')
  3 | 	: element.classList.add('className')

`;

exports[`prefer-classlist-toggle > invalid(8): element.classList.contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 2`] = `

Message:
> 1 | element.classList.contains('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className')

`;

exports[`prefer-classlist-toggle > invalid(8): element.classList[(0, condition) ? \"add\" : \"remove\"](className) 1`] = `

  1 | element.classList[(0, condition) ? "add" : "remove"](className)

`;

exports[`prefer-classlist-toggle > invalid(8): element.classList[(0, condition) ? \"add\" : \"remove\"](className) 2`] = `

Message:
> 1 | element.classList[(0, condition) ? "add" : "remove"](className)
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle(className, (0, condition))

`;

exports[`prefer-classlist-toggle > invalid(8): if (0, condition) {\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 1`] = `

  1 | if (0, condition) {
  2 | 	element.classList.add('className');
  3 | } else {
  4 | 	element.classList.remove('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(8): if (0, condition) {\n\telement.classList.add('className');\n} else {\n\telement.classList.remove('className');\n} 2`] = `

Message:
> 1 | if (0, condition) {
    | ^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', (0, condition));

`;

exports[`prefer-classlist-toggle > invalid(9): element.classList[element.classList.contains(\"className\") ? \"remove\" : \"add\"](\"className\") 1`] = `

  1 | element.classList[element.classList.contains("className") ? "remove" : "add"]("className")

`;

exports[`prefer-classlist-toggle > invalid(9): element.classList[element.classList.contains(\"className\") ? \"remove\" : \"add\"](\"className\") 2`] = `

Message:
> 1 | element.classList[element.classList.contains("className") ? "remove" : "add"]("className")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle("className")

`;

exports[`prefer-classlist-toggle > invalid(9): element?.classList.contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 1`] = `

  1 | element?.classList.contains('className')
  2 | 	? element.classList.remove('className')
  3 | 	: element.classList.add('className')

`;

exports[`prefer-classlist-toggle > invalid(9): element?.classList.contains('className')\n\t? element.classList.remove('className')\n\t: element.classList.add('className') 2`] = `

Message:
> 1 | element?.classList.contains('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	? element.classList.remove('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	: element.classList.add('className')
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element?.classList.toggle('className')

`;

exports[`prefer-classlist-toggle > invalid(9): if (0, condition) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 1`] = `

  1 | if (0, condition) {
  2 | 	element.classList.remove('className');
  3 | } else {
  4 | 	element.classList.add('className');
  5 | }

`;

exports[`prefer-classlist-toggle > invalid(9): if (0, condition) {\n\telement.classList.remove('className');\n} else {\n\telement.classList.add('className');\n} 2`] = `

Message:
> 1 | if (0, condition) {
    | ^^^^^^^^^^^^^^^^^^^
> 2 | 	element.classList.remove('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } else {
    | ^^^^^^^^
> 4 | 	element.classList.add('className');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer using \`Element#classList.toggle()\` to toggle class names.

Output:
  1 | element.classList.toggle('className', !(0, condition));

`;
